--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
   <a href="./simple_animation.html"> Simple animation </a>
 </div>
 <div>
-  <a href="./hw6.html"> HW6 - Football-like Game </a>
+  <a href="./hw6.html"> Football-like Game </a>
 </div>
 <div> 
-  <a href="./platformer.html"> HW7 - Platform Game </a>
+  <a href="./platformer.html"> Platform Game </a>
 </div>
 <div>
-  <a href="./hw8.html"> HW8 - Maze Game </a>
+  <a href="./hw8.html"> Maze Game </a>
 </div>
 <div>
-  <a href="./sound_example.html"> HW9 - Sound Check Game </a>
+  <a href="./sound_example.html"> Sound Check Game </a>
 </div>
 <div>
-  <a href="./hw10.html"> HW10 - Maze Game with Enemy </a>
+  <a href="./hw10.html"> Maze Game with Enemy </a>
 </div>
 <div>
-  <a href="./hw11.html"> HW11 - Boulder Dodging Game </a>
+  <a href="./hw11.html"> Boulder Dodging Game </a>
 </div>
 <div>
-  <a href="./hw12.html"> HW12 - Senario Game </a>
+  <a href="./hw12.html"> Senario Game </a>
 </div>
 <div>
-  <a href="./hw13.html"> HW13 - Game of Life Simulator </a>
+  <a href="./hw13.html"> Game of Life Simulator </a>
 </div>
